# 3d_engine

./: .gitignore  CMakeLists.txt  README.md
Game/: main.cpp
OGL3D/include/OGL3D/Game/: OGame.h
OGL3D/include/OGL3D/Window/: OWindow.h
OGL3D/src/OGL3D/Game/: OGame.cpp
OGL3D/src/OGL3D/Window/: OWindow.cpp
